--- a/project_files/templates/index.html
+++ b/project_files/templates/index.html
@@ -1,11 +1,15 @@
 <html>
 
 <head>
-    <title>Flask Tutorial</title>
+    <title>Project 3</title>
 </head>
 
 <body>
-    <h1>This is the Index page</h1>
+    <h1>This is the Index page</h1><p>
+        <h3>Availabe route: "/api/v1.0/bankdata"</h3>
+        <h3>Availabe route: "/api/v1.0/banklist"</h3>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="/static/js/script.js"></script>
 </body>
 
 </html>
