--- a/project_files/templates/index.html
+++ b/project_files/templates/index.html
@@ -1,15 +1,58 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Project 3</title>
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Project 3</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  
+
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin="" />
+
+  <!-- Leaflet JavaScript code -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script>
+
+  <!-- Our CSS not sure if we need a separate css as there are css pulled in above -->
+  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 
 <body>
-    <h1>This is the Index page</h1><p>
-        <h3>Availabe route: "/api/v1.0/bankdata"</h3>
-        <h3>Availabe route: "/api/v1.0/banklist"</h3>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="/static/js/script.js"></script>
+    <!-- The div for the heading -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 jumbotron text-center">
+                <h1>Bank Failures Drill Down</h1>
+                <p>Use the interactive charts below to explore the dataset</p>
+            </div>
+        </div>
+        <div class="row">
+            <!-- The div for the map -->
+            <div id="map"></div>
+                </div>
+        </div>
+        <!-- <div class="col-md-5">
+            <div id="bar"></div>
+          </div>
+        </div>          
+        <div class="row">
+          <div class="col-md-12">
+            <div id="bubble"></div>
+          </div>
+        </div> -->
+    </div>
+    
+
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="/static/js/script.js"></script>
+  
 </body>
 
 </html>
