--- a/project_files/templates/index.html
+++ b/project_files/templates/index.html
@@ -1,15 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-<head>
-    <title>Project 3</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Project 3</title>
+    </head>
 
 <body>
     <h1>This is the Index page</h1><p>
         <h3>Availabe route: "/api/v1.0/bankdata"</h3>
         <h3>Availabe route: "/api/v1.0/banklist"</h3>
+        <div>
+            <canvas id="myChart"></canvas>
+        </div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="/static/js/script.js"></script>
+    <script src="/static/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 
 </html>
