some progress from me

--- a/project_files/templates/index(bars added).html
+++ b/project_files/templates/index(bars added).html
@@ -62,6 +62,7 @@
       <div class="chartCard">
         <div class="chartBox">
           <canvas id="myChart"></canvas>
+          <!-- Buttons to change graph parameters -->
           <button onclick="Chart1()">2 bars</button>
           <button onclick="Chart5()">2 bars split at 50K</button>
           <button onclick="Chart2()">3 bars; split Medium between 1M and 100M</button>
