--- a/project_files/templates/index.html
+++ b/project_files/templates/index.html
@@ -47,11 +47,14 @@
           </div>
         </div> -->
     </div>
+  <div id="map"></div>
+    <canvas id="pieChart" width="400" height="400"></canvas>
     
 
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="/static/js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>  
   
 </body>
 
