trimmed a few things

--- a/project_files/templates/index(bars added).html
+++ b/project_files/templates/index(bars added).html
@@ -62,7 +62,7 @@
       <div class="chartCard">
         <div class="chartBox">
           <canvas id="myChart"></canvas>
-          <!-- Buttons to change graph parameters -->
+          <!-- Buttons to change graph -->
           <button onclick="Chart1()">2 bars</button>
           <button onclick="Chart5()">2 bars split at 50K</button>
           <button onclick="Chart2()">3 bars; split Medium between 1M and 100M</button>
@@ -70,12 +70,6 @@
           <button onclick="Chart4()">3 bars; split Medium between 100k and 1M</button>
             </div>
           </div>
-          <div class="container">
-            <div class="row text-center">
-                <h4>Something worth considering is the closure dates on those within the largest asset pool.</h4>
-                <h4>(Refer to the FDIC failed banks list)</h4>
-              </div>
-            </div>
             
       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
         <!-- <div class="col-md-5">
