added map graph to the dashboard

--- a/project_files/templates/index.html
+++ b/project_files/templates/index.html
@@ -57,6 +57,8 @@
             </div>
         </div>
       </div>
+      <!-- Map related to graph -->
+    <div id="popPlot"></div>
       <!-- Chart.js code -->
     <div class="chartCard">
       <div class="chartBox">
@@ -84,6 +86,7 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="../static/js/app.js"></script>
     <script src="../static/js/chart.js"></script>
+    <script src="../../map_followup/popapp.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>  -->
 </body>
 </html>
