removed the dimensional adjustment on bar

--- a/project_files/templates/index.html
+++ b/project_files/templates/index.html
@@ -62,7 +62,7 @@
       <!-- Chart.js code -->
     <div class="chartCard">
       <div class="chartBox">
-        <canvas id="myChart" width="400" height="300"></canvas>
+        <canvas id="myChart"></canvas>
           <!-- Buttons to change graph -->
           <button onclick="Chart1()">2 bars</button>
           <button onclick="Chart5()">2 bars split at 50K</button>
@@ -77,8 +77,8 @@
                   <option value="pie">Pie Chart</option>
                   <option value="doughnut">Doughnut Chart</option>
                 </select>
-                <canvas id="pieChart" width="400" height="300"></canvas>
-                <canvas id="doughnutChart" width="400" height="300"></canvas> 
+                <canvas id="pieChart" width="400" height="250"></canvas>
+                <canvas id="doughnutChart" width="400" height="250"></canvas> 
             </div> 
             <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>      
           </div>
